Add app nickname support
